fix vertical align for forecast table

--- a/GCP/HW6/web/static/89bhzpuc_weather.css
+++ b/GCP/HW6/web/static/89bhzpuc_weather.css
@@ -248,6 +248,10 @@ tr#current-big-picture-row {
     width: 100%;
     height: 100%;
 }
+span.weather-status-span{
+    display: inline-block;
+    vertical-align: middle;
+}
 
 #x-day-forecast th {
     padding-top: 5px;
